--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
 
   flutter_launcher_icons: ^0.9.2
   firebase_core: ^1.12.0
+  firebase_auth: ^3.3.8
+  cloud_firestore: ^3.1.9
+  firebase_storage: ^10.2.8
+  firebase_analytics: ^9.1.1
 
 dev_dependencies:
   flutter_test:
