--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.9
   firebase_storage: ^10.2.8
   firebase_analytics: ^9.1.1
+  google_sign_in: ^5.2.4
 
 dev_dependencies:
   flutter_test:
