--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^10.2.8
   firebase_analytics: ^9.1.1
   google_sign_in: ^5.2.4
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
