--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  font_awesome_flutter: ^9.2.0
+
   flutter_launcher_icons: ^0.9.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.8
