--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -63,5 +63,14 @@
     	</dict>
     </array>
     <!-- End of the Google Sign-in Section -->
+
+    <!-- 画像取得 Section -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Your Photo Library is required for this app</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Your Camera is required for this app</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Your Microphone is required for this app</string>
+    <!-- End of 画像取得 Section -->
 </dict>
 </plist>
