--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -72,5 +72,9 @@
     <key>NSMicrophoneUsageDescription</key>
     <string>Your Microphone is required for this app</string>
     <!-- End of 画像取得 Section -->
+    <!-- geoLocator Section -->
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to location when open.</string>
+    <!-- End of geoLocator Section -->
 </dict>
 </plist>
