--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
 
   image_picker: ^0.8.4+11
 
+  geocoding: ^2.0.4
+  geolocator: ^8.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
