--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,22 +37,21 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   font_awesome_flutter: ^9.2.0
-
   flutter_launcher_icons: ^0.9.2
+
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.8
   cloud_firestore: ^3.1.9
   firebase_storage: ^10.2.8
   firebase_analytics: ^9.1.1
   google_sign_in: ^5.2.4
+
   provider: ^6.0.2
-
   fluttertoast: ^8.0.9
-
   image_picker: ^0.8.4+11
-
   geocoding: ^2.0.4
   geolocator: ^8.2.0
+  google_maps_flutter: ^2.1.2
 
 dev_dependencies:
   flutter_test:
