--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   geocoding: ^2.0.4
   geolocator: ^8.2.0
   google_maps_flutter: ^2.1.2
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
